<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.ideacreation.can.app.activity.RegisterActivity">

    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/registerProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/registerForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/registerPhoneForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/new_profile_title"
                android:textSize="@dimen/title_text_size"
                tools:layout_editor_absoluteX="132dp"
                tools:layout_editor_absoluteY="16dp" />

            <RadioGroup
                android:id="@+id/profileTypeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="45dp">

                <RadioButton
                    android:id="@+id/radioPrivateId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_private_title"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="62dp" />

                <RadioButton
                    android:id="@+id/radioShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_shop_title"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="94dp" />

                <RadioButton
                    android:id="@+id/radioBusiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_business_title"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="126dp" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/registerLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/locationButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location_description"
                android:visibility="gone"
                app:srcCompat="@android:drawable/ic_menu_mapmode" />

            <Button
                android:id="@+id/registerButtonId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_register" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
